third_party/WebKit/Source/WebCore/platform/chromium/ScrollAnimatorChromiumMac.mm
@@ -1290,10 +1290,7 @@ void ScrollAnimatorChromiumMac::stopScrollbarPaintTimer()
 
 void ScrollAnimatorChromiumMac::initialScrollbarPaintTimerFired(Timer<ScrollAnimatorChromiumMac>*)
 {
-    if (scrollableArea()->shouldSuspendScrollAnimations())
-        startScrollbarPaintTimer();
-    else
-        wkScrollbarPainterForceFlashScrollers(m_scrollbarPainterController.get());
+    wkScrollbarPainterForceFlashScrollers(m_scrollbarPainterController.get());
 }
 #endif
 
