third_party/WebKit/Source/WebCore/platform/chromium/ScrollbarOverlayUtilitiesChromiumMac.mm
@@ -89,6 +89,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 @property(retain) NSScrollerImp *verticalScrollerImp;
 @property(assign) id delegate;
 
+- (void)hideOverlayScrollers;
 - (void)flashScrollers;
 - (void)contentAreaScrolled;
 - (void)contentAreaWillDraw;
@@ -339,6 +340,7 @@ void wkDidEndScrollGesture(WKScrollbarPainterControllerRef controller)
 
 void wkScrollbarPainterForceFlashScrollers(WKScrollbarPainterControllerRef controller)
 {
+    [controller hideOverlayScrollers];
     [controller flashScrollers];
 }
 
